--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ body {
 }
 
 /* Sign container - fullscreen flex center */
-#sign-container {
+#display {
   width: 100%;
   height: 100%;
   display: flex;
